Simplify debezium tests