@@ -1,6 +1,5 @@
-package io.apicurio.tests.debezium;
+package io.apicurio.tests.serdes.apicurio.debezium;
 
-import io.debezium.testing.testcontainers.ConnectorConfiguration;
 import io.debezium.testing.testcontainers.DebeziumContainer;
 import io.quarkus.test.common.QuarkusTestResourceLifecycleManager;
 import org.testcontainers.containers.KafkaContainer;
@@ -9,6 +8,7 @@ import org.testcontainers.containers.PostgreSQLContainer;
 import org.testcontainers.lifecycle.Startables;
 import org.testcontainers.utility.DockerImageName;
 
+import java.util.Collections;
 import java.util.Map;
 import java.util.stream.Stream;
 
@@ -35,32 +35,10 @@ public class DebeziumContainerResource implements QuarkusTestResourceLifecycleMa
     public Map<String, String> start() {
         // Start the postgresql database, kafka, and debezium
         Startables.deepStart(Stream.of(kafkaContainer, postgresContainer, debeziumContainer)).join();
-
-        // Register the postgresql connector for outbox pattern
-        ConnectorConfiguration connector = ConnectorConfiguration.forJdbcContainer(postgresContainer)
-                .with("topic.prefix", "registry").with("schema.include.list", "public")
-                .with("table.include.list", "public.outbox").with("transforms", "outbox")
-                .with("transforms.outbox.type", "io.debezium.transforms.outbox.EventRouter");
-
-        debeziumContainer.registerConnector("my-connector", connector);
-
         System.setProperty("bootstrap.servers", kafkaContainer.getBootstrapServers());
 
-        return Map.of("apicurio.datasource.url", postgresContainer.getJdbcUrl(),
-                "apicurio.datasource.username", "postgres", "apicurio.datasource.password", "postgres");
+        return Collections.emptyMap();
     }
-
-    /**
-     * Helper method to register a PostgreSQL connector with custom configuration
-     */
-    public static void registerPostgresConnector(String connectorName, String topicPrefix, String tableIncludeList) {
-        ConnectorConfiguration connector = ConnectorConfiguration.forJdbcContainer(postgresContainer)
-                .with("topic.prefix", topicPrefix)
-                .with("table.include.list", tableIncludeList);
-
-        debeziumContainer.registerConnector(connectorName, connector);
-    }
-
 
     @Override
     public void stop() {
